--- a/index.html
+++ b/index.html
@@ -1,48 +1,38 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link href="styles.css" rel="stylesheet" />
-    <title>JavaScript DOM Tutorials</title>
-  </head>
-  <body>
-  	<div id="wrapper">
-	    <header>
-	    	<div id="page-banner">
-	    		<h1 class="title">Bookorama</h1>
-          <p>Books for Ninjas</p>
-          <form id="search-books">
-            <input type="text" placeholder="Search books..." />
-          </form>
-	    	</div>
-	    </header>
-	    <div id="book-list">
-	    	<h2 class="title">Books to Read</h2>
-	    	<ul>
-	    		<li>
-	    			<span class="name">Name of the Wind</span>
-	    			<span class="delete">delete</span>
-	    		</li>
-	    		<li>
-	    			<span class="name">The Wise Man's Fear</span>
-	    			<span class="delete">delete</span>
-	    		</li>
-	    		<li>
-	    			<span class="name">Kafka on the Shore</span>
-	    			<span class="delete">delete</span>
-	    		</li>
-	    		<li>
-	    			<span class="name">The Master and the Margarita</span>
-	    			<span class="delete">delete</span>
-	    		</li>
-	    	</ul>
-	    </div>
-	    <form id="add-book">
-	    	<input type="text" placeholder="Add a book..." />
-	    	<button>Add</button>
-	    </form>
+<head>
+	<title>Oefening 130 DOM Events</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+	<h1>Shopping list</h1>
+	<p id="first">Get it done today</p>
+	<input id="userinput" type="text" placeholder="enter items">
+	<button id="enter">"enter"</button>
+	<ul>
+		<li>
+			<span class="name">Notebook</span>
+			<button class="delete">delete</button>
+		</li>
+		<li>
+			<span class="name">Jeloo</span>
+			<button class="delete">delete</button>
+		</li>
+		<li>
+			<span class="name">Rice</span>
+			<button class="delete">delete</button>
+		</li>
+		<li>
+			<span class="name">BirthDay Cake</span>
+			<button class="delete">delete</button>
+		</li>
+		<li>
+			<span class="name">Candles</span>
+			<button class="delete">delete</button>
+		</li>
+	</ul>
 
-    </div>
-    <script src="app.js"></script>
-  </body>
+
+	<script type="text/javascript" src="script.js"></script>
+</body>
 </html>
